# constellation-standalone

./: .gitignore  .licenserc.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: devel-push.yml  project-pull-request.yml  project-push.yml  pull-request.yml
src/: lib.rs
