# Copyright © 2024 The Johns Hopkins Applied Physics Laboratory LLC.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License, version
# 3, as published by the Free Software Foundation.  If you
# would like to purchase a commercial license for this software, please
# contact APL’s Tech Transfer at 240-592-0817 or
# techtransfer@jhuapl.edu.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with this program.  If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "constellation-standalone"
description = "Standalone executable support for the Constellation distributed systems platform"
version = "0.0.0"
rust-version = "1.82"
license = "AGPL-3.0-only"
keywords = []
categories = []
exclude = [
    ".gitignore"
]
edition = "2018"

[features]
default = ["log"]
log = ["dep:log", "dep:log4rs"]

[dependencies]
libc = { version = "0.2" }
log = { version = "0.4", optional = true }
log4rs = { version = "1.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
